[project]
name = "trigger-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psychopy>=2025.1.0",
    "pyserial>=3.5",
    "pyside2>=5.15.2.1",
    "pyyaml>=6.0.2",
]
[tool.uv]
environments = ["sys_platform != 'darwin'"]
